hphp/hack/test/typecheck/predicate.php.exp
File "predicate.php", line 7, characters 15-18:
Invalid argument (Typing[4110])
File "predicate.php", line 3, characters 20-22:
This is an int
File "predicate.php", line 6, characters 7-14:
It is incompatible with a float from the argument to this \is_float test
